objects/LLC_BI__Covenant__c.object
<CustomObject>
    <description>The Covenant Object contains information about loan covenants that can be related to a relationship or a contact</description>
    <fields>
        <fullName>CF_Compliance_Status_Count__c</fullName>
        <description>If Covenant Compliance Status is In Progress this field will capture that and used to update &apos;Outstanding F/S Covenants?&apos; checkbox on Account</description>
        <label>Compliance Status Count</label>
        <summaryFilterItems>
            <field>LLC_BI__Covenant_Compliance__c.CF_Covenant_Compliance_Status_Check__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Covenant_Compliance__c.LLC_BI__Covenant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required. It is manually populated when a covenant is created through the loan, otherwise it is automatically populated. It identifies the relationship associated with the covenant record and is automatically populated when creating a new covenant record.</description>
        <inlineHelpText>Account that the Covenant applies to.</inlineHelpText>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Covenants</relationshipLabel>
        <relationshipName>Covenants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This defaults to false. Active indicator for the covenant</description>
        <inlineHelpText>Is the Covenant active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is manually populated. The (optional) contact that this Covenant relates to.</description>
        <inlineHelpText>Contact to which this Covenant applies.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Covenants</relationshipLabel>
        <relationshipName>Covenants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Covenant_Name__c</fullName>
        <description>This field is optional. It is manually populated. It allows users to enter a Name (description) for the Covenant record. This field is no longer recommended for use.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Covenant Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Covenant_Sub_Type__c</fullName>
        <description>Deprecated; use Covenant_Type_Reference__c</description>
        <label>-D Covenant Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Covenant_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Tax Returns</fullName>
                </value>
                <value>
                    <fullName>Personal Financial Statement</fullName>
                </value>
                <value>
                    <fullName>Business Financial Statement</fullName>
                </value>
                <value>
                    <fullName>Lease Information</fullName>
                </value>
                <value>
                    <fullName>Debt Service Coverage of Borrower</fullName>
                </value>
                <value>
                    <fullName>Debt Service Coverage with and without Distributions</fullName>
                </value>
                <value>
                    <fullName>Global Debt Service Coverage</fullName>
                </value>
                <value>
                    <fullName>Minimum Working Capital Ratio</fullName>
                </value>
                <value>
                    <fullName>Maximum Debt to Worth</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Key Man Life Insurance</fullName>
                </value>
                <value>
                    <fullName>Maintain Accounts</fullName>
                </value>
                <value>
                    <fullName>Minimum Liquidity</fullName>
                </value>
                <value>
                    <fullName>Limiting Compensation</fullName>
                </value>
                <value>
                    <fullName>Minimum Working Capital</fullName>
                </value>
                <value>
                    <fullName>Minimum Current Ratio</fullName>
                </value>
                <value>
                    <fullName>Minimum Times Interest Earned</fullName>
                </value>
                <value>
                    <fullName>Fixed Asset Purchases</fullName>
                </value>
                <value>
                    <fullName>Collateral Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Covenant_Type_Reference__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is required. It is manually populated. It identifies the Covenant Type associated with the Covenant Record and is populated automatically when creating a new Covenant record.</description>
        <label>Covenant Type</label>
        <referenceTo>LLC_BI__Covenant_Type__c</referenceTo>
        <relationshipLabel>Covenants</relationshipLabel>
        <relationshipName>Covenants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Covenant_Type__c</fullName>
        <description>Deprecated; use Covenant_Type_Reference__c</description>
        <label>-D Covenant Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Financial Statement Requirements</fullName>
                </value>
                <value>
                    <fullName>Financial Indicators</fullName>
                </value>
                <value>
                    <fullName>Default Covenants</fullName>
                </value>
                <value>
                    <fullName>Term Covenants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Days_Past_Next_Evaluation__c</fullName>
        <description>This is automatically calculated. Number of days past the Next Evaluation Date. If Today is not past the evaluation date, then this returns 0.</description>
        <formula>IF(ISNULL(LLC_BI__Next_Evaluation_Date__c) || (Today() - LLC_BI__Next_Evaluation_Date__c &lt;= 0), Null , (Today() - LLC_BI__Next_Evaluation_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days past the Next Evaluation Date</inlineHelpText>
        <label>Days Past Next Evaluation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Days_Until_Next_Evaluation__c</fullName>
        <description>This is automatically calculated. Number of days until the Next Evaluation Date. If Today is not before the next evaluation date, then this returns 0.</description>
        <formula>IF(ISNULL(LLC_BI__Next_Evaluation_Date__c)||(LLC_BI__Next_Evaluation_Date__c - Today() &lt; 0),Null,(LLC_BI__Next_Evaluation_Date__c-Today()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days until the Next Evaluation Date</inlineHelpText>
        <label>Days Until Next Evaluation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Financial_Indicator_Value__c</fullName>
        <description>This field is manually populated. The value that&apos;s being confirmed with the financial indicator covenant. IE: DSC of  at least 1.25</description>
        <inlineHelpText>The value that&apos;s being confirmed with the financial indicator covenant. IE: DSC of  at least 1.25</inlineHelpText>
        <label>Financial Indicator Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Frequency_Months__c</fullName>
        <description>This field is automatically populated via a formula. It automatically translates the Covenant Frequency into a numeric number (e.g., Annually = 12).</description>
        <formula>IF( ISPICKVAL(LLC_BI__Frequency__c, &apos;Annually&apos;), 12,
IF(ISPICKVAL(LLC_BI__Frequency__c, &apos;Quarterly&apos;), 3,
IF(ISPICKVAL(LLC_BI__Frequency__c, &apos;Semi-Annually&apos;), 6,
IF(ISPICKVAL(LLC_BI__Frequency__c, &apos;Every 2 Months&apos;),2,
IF(ISPICKVAL(LLC_BI__Frequency__c, &apos;Monthly&apos;),1,0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frequency Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Frequency__c</fullName>
        <description>This field is manually populated. Frequency that a covenant is to be tested.</description>
        <inlineHelpText>Frequency</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Every 2 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Evaluation_Date__c</fullName>
        <description>This field is optional. It is automatically populated whenever covenant compliance records are updated to Approved. It identifies the last date that a Covenant record was reviewed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Evaluation_Status__c</fullName>
        <description>This field is automatically populated. Last Evaluation Status populated from the Covenant Compliance record</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Evaluation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <description>Loan that &apos;owns&apos; the Covenants</description>
        <inlineHelpText>Loan that the Covenant is related to.</inlineHelpText>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Covenants</relationshipLabel>
        <relationshipName>Covenants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Next_Evaluation_Date__c</fullName>
        <description>This field is optional. It is initially manually populated, but afterward, it is automatically populated whenever covenant compliance records are updated to Approved. It identifies the next date that a Covenant record should be reviewed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Notes__c</fullName>
        <description>This field is optional. It is manually populated. It is a text field which allows users to enter additional notes or information related to the covenant record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Covenant</label>
    <nameField>
        <displayFormat>COV-{00000000}</displayFormat>
        <label>Covenant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covenants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>